# taskwarriorandroidcli

./: CMakeLists.txt  build-emb.sh  clean-cmake.sh
android-output/: .gitignore
src/: CMakeLists.txt  TLSClient.cpp  TLSClient.h  Task.cpp
src/commands/: CmdSync.cpp  CmdSync.h
src/glob/: .gitignore  CMakeLists.txt
src/uuid/: .gitignore  CMakeLists.txt
